# multi-modal-ai-project

./: .gitignore  Makefile  README.md  detections_batch.csv  detections_batch_headless.csv  detections_quick.csv  dev-requirements.txt  esp32_data.csv  live_detections.csv  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: py_compile.yml
examples/emotiv/: emotiv_brainflow_example.py
examples/esp32/: platformio.ini
examples/esp32/src/: main.cpp
examples/f9p/: read_gnss.py
examples/lidar/: rplidar_scan.py
examples/node/: index.js  package.json
examples/pixhawk/: pixhawk_light_control.py
examples/serial/: serial_sensor_reader.py
examples/vision/: README.md  async_writer.py  emotiv_integration.py  realsense_depth_detect.py  requirements.txt  webcam_yolo.py  webcam_yolo_capture.py  webcam_yolo_live_with_sidepanel.py  webcam_yolo_realsense.py  webcam_yolo_unified.py  webcam_yolo_unified_threaded.py  webcam_yolo_unified_threaded.py.bak
scripts/: apply_async_writer_patch.py  async_demo.py  f9p_nmea_to_csv.py  f9p_status.py  f9p_ubx_poll.py  f9p_ubx_probe.py  f9p_ubx_probe_fix.py  generate_dataset.py  setup.sh
src/: main.py
src/multi_modal_ai_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/sensors/: __init__.py  simulated_sensor.py
tests/: test_smoke.py
