[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-modal-ai-project"
version = "0.1.0"
description = "Multi-modal AI project (local scaffold)"
authors = [{name = "powerprogressiA"}]
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
cv = ["opencv-python-headless", "torch"]
bio = ["mne"]
llm = ["transformers>=4.30.0", "accelerate"]

[tool.setuptools.packages.find]
where = ["src"]
